<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewGoal"
    android:background="@drawable/purple_back"
    tools:ignore="MissingClass">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/lightgrey"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="344dp"
        android:background="@color/lightgrey"
        android:minHeight="48dp"
        android:onClick="switchToMainActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/GoalHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="208dp"
        android:text="@string/display_goal_viewTxt"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/progress_money"
        android:layout_width="221dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/nameProgressTxt"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dpvChart" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="138dp"
        android:layout_height="27dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/remainingTimeTxt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/progress_rem_time"
        android:layout_width="112dp"
        android:layout_height="29dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/remainTimeValueTxt"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/goal_date" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="138dp"
        android:layout_height="27dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/remainingAmountTxt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/progress_rem_amount"
        android:layout_width="112dp"
        android:layout_height="29dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/remainingAmountValueTxt"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/progress_rem_time" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="140dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/goalDate"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_money" />

    <TextView
        android:id="@+id/goal_date"
        android:layout_width="112dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/goalDateValueTxt"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/progress_money" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="138dp"
        android:layout_height="27dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/goalDescriptionTxt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/goalDesc"
        android:layout_width="329dp"
        android:layout_height="88dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/border"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="launchUpdateGoal"
        android:text="@string/updateBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="deleteGoal"
        android:text="@string/deleteBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <app.futured.donut.DonutProgressView
        android:id="@+id/dpvChart"
        android:layout_width="161dp"
        android:layout_height="160dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="108dp"
        app:donut_gapAngle="270"
        app:donut_gapWidth="20"
        app:donut_strokeWidth="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/remainingPer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dpvChart"
        app:layout_constraintEnd_toEndOf="@+id/dpvChart"
        app:layout_constraintStart_toStartOf="@+id/dpvChart"
        app:layout_constraintTop_toTopOf="@+id/dpvChart" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="138dp"
        android:layout_height="27dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/categoryTxt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/categoryValue"
        android:layout_width="149dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_rem_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>