<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateBudgetUI"
    android:background="@drawable/purple_back">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/lightgrey"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightgrey"
        android:contentDescription="@string/back_img_btn"
        android:minHeight="48dp"
        android:onClick="switchToMainActivity"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="208dp"
        android:text="@string/new_budget_headet_txt"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/budget_name"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#0B0B0B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/budget_amount"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:ems="10"
        android:text="0"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#090909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/budget_completion_date"
        android:textColor="#070707"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_name" />

    <Button
        android:id="@+id/datePickerBtn"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:onClick="openDatePickerMethod"
        android:text="@string/date_picker_btn_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/amount"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerBtn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/budget_name_txtV"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorybtn" />

    <Button
        android:id="@+id/categorybtn"
        android:layout_width="159dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:background="@color/purple_500"
        android:onClick="switchToCategoryPage"
        android:padding="5dp"
        android:text="@string/select_category_btn_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/category_txtV"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/categoryTxtV"
        android:layout_width="141dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/border"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/none"
        android:textAlignment="center"
        android:textColor="#070707"
        app:layout_constraintStart_toEndOf="@+id/categorybtn"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginEnd="184dp"
        android:background="@drawable/rounded_button"
        android:onClick="insertToDB"
        android:text="@string/create_btn_txt"
        android:textColor="#090909"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_amount"
        app:layout_constraintVertical_bias="0.329"
        tools:ignore="TextContrastCheck,UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>