<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateBudget"
    android:background="@drawable/purple_back">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/lightgrey"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/updateBudgetTxtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="208dp"
        android:text="@string/update_budget_header_txt"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/BNameTxtV"
        android:layout_width="119dp"
        android:layout_height="26dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/budget_name_txtV"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/BNameTxtV2"
        android:layout_width="119dp"
        android:layout_height="26dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/amount"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BName" />

    <TextView
        android:id="@+id/BNameTxtV3"
        android:layout_width="141dp"
        android:layout_height="26dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:text="@string/budget_completion_date"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateBudAmt" />

    <Button
        android:id="@+id/datePickerBtn"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:onClick="openDatePickerMethod"
        android:text="@string/date_picker_btn_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BNameTxtV3" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="344dp"
        android:background="@color/lightgrey"
        android:contentDescription="@string/back_img_btn"
        android:minHeight="48dp"
        android:onClick="backToDisplayBudget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/BName"
        android:layout_width="218dp"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/inputBudName"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BNameTxtV"
        android:autofillHints="" />

    <EditText
        android:id="@+id/updateBudAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:background="@drawable/border"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BNameTxtV2"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="56dp"
        android:background="@color/brightgreen"
        app:backgroundTint="@color/brightgreen"
        android:onClick="onClickSave"
        android:text="@string/save_btn_text"
        android:textColor="#37474F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerBtn"
        tools:ignore="UsingOnClickInXml" />

<!--    <EditText-->
<!--        android:id="@+id/editTextNumberDecimal"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:inputType="numberDecimal"-->
<!--        tools:layout_editor_absoluteX="44dp"-->
<!--        tools:layout_editor_absoluteY="665dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>